// Copyright 2019 Publr Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package publr.users.v1alpha3;

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/prksu/publr/pkg/api/users/v1alpha3;users";

service UserService {
  rpc ListUser(ListUserRequest) returns (UserList) {
    option (google.api.http) = {
      get: "/v1alpha3/{parent=sites/*}/users"
    };
  }
  rpc CreateUser(CreateUserRequest) returns (User) {
    option (google.api.http) = {
      post: "/v1alpha3/{parent=sites/*}/users"
      body: "user"
    };
  }
  rpc GetUser(GetUserRequest) returns (User) {
    option (google.api.http) = {
      get: "/v1alpha3/{name=sites/*/users/*}"
    };
  }
  rpc UpdateUser(UpdateUserRequest) returns (User) {
    option (google.api.http) = {
      patch: "/v1alpha3/{name=sites/*/users/*}"
      body: "user"
    };
  }
  rpc DeleteUser(DeleteUserRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/v1alpha3/{name=sites/*/users/*}"
    };
  }
  rpc SearchUser(SearchUserRequest) returns (UserList) {
    option (google.api.http) = {
      get: "/v1alpha3/{parent=sites/*}/users:search"
    };
  }
}

message User {
  string name = 1;
  string email = 2;
  string password = 3;
  string username = 4;
  string fullname = 5;
  enum UserRoles {
    READER = 0;
    AUTHOR = 1;
    ADMINISTRATOR = 2;
    OWNER = 3;
  }
  UserRoles role = 6;
  google.protobuf.Timestamp create_time = 7;
  google.protobuf.Timestamp update_time = 8;
}

message UserList {
  repeated User users = 1;
  string next_page_token = 2;
}

message ListUserRequest {
  string parent = 1;
  string order_by = 2;
  int32 page_size = 3;
  string page_token = 4;
}

message CreateUserRequest {
  string parent = 1;
  User user = 2;
}

message GetUserRequest {
  string name = 1;
}

message UpdateUserRequest {
  string name = 1;
  User user = 2;
}

message DeleteUserRequest {
  string name = 1;
}

message SearchUserRequest {
  string parent = 1;
  string query = 2;
  string order_by = 3;
  int32 page_size = 4;
  string page_token = 5;
}